2006-04-16  rgareus  <robin@gareus.org>
 - configure.ac: --disable-portmidi -> 'force to' use alsamidi if avaliable
 - midi.c: added MTC sysex parser for alsamidi.
 - main.c: xjadeo new command line option -i <OSD-mode>, --info <OSD-mode> 
 - xjadeo: fixed -t option. (exit instead of segfault when file not found :)
 * xjadeo v0.3.9

2006-04-11  rgareus  <robin@gareus.org>
 many minor typos and fixes.
 fixed midi autodetection in configure.ac
 added alsa midi support as fallback if portmidi is not found
 * xjadeo v0.3.8

2006-04-11  rgareus  <robin@gareus.org>
 * configure.ac: renamed options for consistancy.
   new defaults: autodetect all feat. only gtk is disabled by default
   added -DTTFFONTFILE comment. no configure option yet.
 * xjadeo:
 - --vo [<int>|<name>]. also swapped --vo option numbering.. for:
 - fallback video mode auto detection. 
 - implemented rudimentary keyboard event support (for all display modes)
 - <ESC> key quits xjadeo (all display modes) 
 - --midifps [MTC|Video|resample] option and 'get/set midisync' remote cmd.
 - initialize midi just before event loop -> prevent midi buffer overflow
 - added alsamidi code. (works but not integrated in xjadeo & build system)
 - xapi 'get/set seekmode': seek to keyframes only.
 - minor fixes.

2006-04-09  Luis Garrido  <luisgarrido@users.sourceforge.net>
 - configure.ac: fixed Qt autoconf test so Qt4 debug lib is not required.
 - src/qt-gui/Makefile.am: fixed typo.

2006-04-08  Luis Garrido  <luisgarrido@users.sourceforge.net>
 - Fixed qjadeo makefile so the qt4 compilation keeps a backup of the qt3 
 version.

2006-04-08  Luis Garrido  <luisgarrido@users.sourceforge.net>
 - Fixed broken autogen.sh (after removal of m4 subdir)
 - Fixed --disable-qtgui option.

2006-04-08  Luis Garrido  <luisgarrido@users.sourceforge.net>
 - Autotoolification of qjadeo for Qt4. Now qjadeo takes the xjadeo binary 
 from the environment variable XJADEO or from the install path.

2006-04-08  rgareus  <robin@gareus.org>