@@ -1,3 +1,8 @@
+2006-04-17  rgareus  <robin@gareus.org>
+ - amidi seqencer instead of alsa rawmidi
+ - remote cmd midi status fixed.
+ - cmd arg. added "-x list" as alias for "-x -1"
+
 2006-04-16  rgareus  <robin@gareus.org>
  - configure.ac: --disable-portmidi -> 'force to' use alsamidi if avaliable
  - midi.c: added MTC sysex parser for alsamidi.
